--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,93 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#App {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
+  background-color: #f9f9f9;
+  height: 100vh;
+}
+
+.landing{
+  background-image: url('./landingImage.jpg');
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  color: white;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  margin-top: -25px;
+}
+
+.landingText{
+  background-color: rgba(255,255,255,0.5);
+  width: 400px;
+  height: 500px;
+  padding-top: 2%;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Arial';
+}
+
+.header{
+  background-color: #343d46;
+  width : 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  z-index: 10;
+  opacity: 0.8;
+  font-size: 20px;
+}
+
+.header a:hover{
+  background-color: Black;
+  color:white;
+}
+
+.authNav{
+  width:100%;
+  height:20%;
+  text-decoration: none;
+  opacity: 0.8;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.authNav:hover{
+  opacity: 1;
+}
+
+#workerAuthNav{
+  background-color: #343d46;
+  text-decoration: none;
+}
+
+#employerAuthNav{
+  background-color: midnightblue;
+}
+
+button{
+  width: 150px;
+  height: 50px;
+  border-radius: 10px;
+  margin-bottom: 5px;
+  background-color: white;
+  font-family: 'Courier Prime Sans'
+}
+
+button:hover{
+  transition-duration: 0.5s;
+  background-color: #343d46;
+  color: white;
+}
+
+a {
+  text-decoration: none;
+  color: #000000;
 }
 
 @keyframes App-logo-spin {
