--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,8 +15,8 @@
   color: white;
   text-align: center;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
   margin-top: -25px;
 }
@@ -35,12 +35,12 @@
 
 .header{
   background-color: #343d46;
-  width : 50%;
+  width : 800px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   z-index: 10;
-  opacity: 0.8;
+  opacity: 0.9;
   font-size: 20px;
 }
 
