--- a/src/styles/auth.css
+++ b/src/styles/auth.css
@@ -3,6 +3,10 @@
   height: 100%;
   /* background-image: url('../../landingImage.jpg'); */
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
 }
 
 .authCard{
