began set up of employer functionality. Updated styling.

--- a/src/styles/auth.css
+++ b/src/styles/auth.css
@@ -1,12 +1,18 @@
+@import url('https://fonts.googleapis.com/css?family=Work+Sans');
+
+h1, h2, h3, p {
+  font-family: 'Work Sans', sans-serif
+}
+
 .main{
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   /* background-image: url('../../landingImage.jpg'); */
   background-size: cover;
   display: flex;
   flex-direction: column;
-  align-content: center;
-  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .authCard{
@@ -15,23 +21,26 @@
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  margin-top: 10%;
-  opacity: 0.95
+  margin-top: 40px;
+  opacity: 0.7;
+  animation: fadein 3.5s;
+ 
 }
 
 .authCardLogin{
   width: 300px;
   height: 300px;
-  margin-left: 40%;
+  /* margin-left: 40%; */
 }
 
 .authCardRegister{
-  width: 50%;
-  height: 70vh;
-  margin-left: 25%;
-  margin-top: 5%;
+  width: 450px;
+  min-height: 300px;
+  /* height: 70vh; */
+  /* margin-left: 25%; */
+  /* margin-top: 5%; */
 }
 
 .loginForm{
@@ -44,14 +53,20 @@
 input {
   width: 250px;
   height: 15px;
-  border-radius: 5px;
-  margin-bottom: 15px;
+  border-radius: 0px;
+  margin-bottom: 25px;
   margin-top: 0px;
-  font-family: 'Courier Prime Sans'
+  font-family: 'Courier Prime Sans';
+  background-color: transparent;
+  border-left:none;
+  border-right: none;
+  border-top:none
 }
 
-input :hover{
+input:focus{
   scale: 1.5;
+  animation: underline 1.5s;
+  /* border-bottom-color: green */
 }
 
 textarea{
@@ -67,5 +82,15 @@ textarea{
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 600px;
+  height: 450px;
+}
+
+
+@keyframes fadein {
+  from {opacity: 0;}
+  to {opacity: 1}
+}
+
+@keyframes underline{
+  to {border-bottom-color: green }
 }
