--- a/src/styles/user.css
+++ b/src/styles/user.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Work+Sans');
+
+h1, h2, p {
+  font-family: 'Work Sans', sans-serif
+}
+
 .usermain{
   width: 100vw;
   height: 100vh;
@@ -12,9 +18,7 @@
 .tile{
   width: 400px;
   height: 500px;
-  background: #4DA0B0;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #D39D38, #4DA0B0);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #D39D38, #4DA0B0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-color: #1f1c1c;
   border-radius: 20px;
   color: white;
   display: flex;
@@ -55,3 +59,10 @@
   flex-direction: row;
   justify-content: space-around;
 }
+
+i{
+  margin-left:0;
+  margin-right: 0;
+}
+
+
