--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Work+Sans');
+@import url('https://fonts.googleapis.com/css?family=Raleway');
+
+h1, h2 {
+  font-family: 'Raleway', sans-serif
+}
+
+p{
+  font-family: 'Work Sans', sans-serif
+}
+ 
  #App {
   display: flex;
   flex-direction: column;
@@ -8,8 +19,9 @@
   width: 100vw 
 }  
 .landing{
-  background-image: url('./landingImage.jpg');
-  background-size: cover;
+  /* background-image: url('./landingImage.jpg');
+  background-size: cover; */
+  background-image: linear-gradient(to right, rgb(27, 25, 25) 0%, #343d46 100%);
   width: 100vw;
   height: 100vh;
   color: white;
@@ -22,7 +34,7 @@
 }
 
 .landingText{
-  background-color: rgba(255,255,255,0.5);
+  background-color: rgba(255,255,255,1);
   width: 400px;
   height: 500px;
   padding-top: 2%;
@@ -31,6 +43,10 @@
   flex-direction: column;
   align-items: center;
   font-family: 'Arial';
+}
+
+.landingText h1{
+  color: black
 }
 
 .header{
@@ -75,7 +91,8 @@ button{
   height: 50px;
   border-radius: 10px;
   margin-bottom: 5px;
-  background-color: white;
+  border: none;
+  background-color: transparent;
   font-family: 'Courier Prime Sans'
 }
 
@@ -89,4 +106,5 @@ a {
   text-decoration: none;
   color: #000000;
 }
+
 
