--- a/src/styles/user.css
+++ b/src/styles/user.css
@@ -30,15 +30,34 @@ h1, h2, p {
   
 }
 
+.tile:hover{
+  transform: scale(1.15)
+}
+
 .tile h2{
   font-family: 'Pacifico', cursive
 }
 
+.likelist{
+  width: 1000px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: baseline;
+  margin-top: 50px;
+}
 .miniCard{
-  height: 100px;
-  width: 500px;
-  background-color: white;
+  height: 150px;
+  width: 400px;
+  background-color: #1f1c1c;
   display: block;
+  padding: 20px;
+  color: white;
+  margin-bottom: 30px;
+  border: none;
+  border-radius: 10px;
+  box-shadow: none;
 }
 
 .jobSuggestContainer {
@@ -56,8 +75,8 @@ h1, h2, p {
   /* position: relative; */
   /* margin-left: 5px; */
   /* margin-top: 5px; */
-  background-color: white;
-  border-radius: 5px;
+  background-color: rgb(165, 165, 165);
+  border-radius: 20px;
   padding: 20px;
 }
 
@@ -65,11 +84,18 @@ h1, h2, p {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  width: 150px;
+  margin-left: 90px;
+  margin-top: 150px;
 }
 
 i{
-  margin-left:0;
+  margin-left:70px;
   margin-right: 0;
+}
+
+i:hover{
+  transform: scale(1.5);
 }
 
 @keyframes tileFadeIn{
