--- a/src/styles/user.css
+++ b/src/styles/user.css
@@ -78,6 +78,7 @@ h1, h2, p {
   background-color: rgb(165, 165, 165);
   border-radius: 20px;
   padding: 20px;
+  animation: expand 2s;
 }
 
 .iconSpace{
@@ -87,6 +88,64 @@ h1, h2, p {
   width: 150px;
   margin-left: 90px;
   margin-top: 150px;
+}
+
+.userProfile{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+
+.userProfileSec2{
+  display: flex;
+  flex-direction: column;
+}
+
+.userbio{
+  width: 400px;
+  height: 100vh;
+  background-color: rgb(209, 209, 209);
+  margin: 20px;
+  padding: 30px;
+  opacity: 0.5;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+ 
+}
+
+.userbio img{
+  width: 100%
+}
+
+.userbio:hover{
+  opacity: 1;
+}
+
+.userAddress{
+  width: 300px;
+  height: 200px;
+  background-color:rgb(250, 249, 249);
+  margin: 20px;
+  padding:30px
+}
+
+.userContact{
+  width: 200px;
+  background-color: rgb(250, 249, 249);
+  margin: 20px;
+  width: 300px;
+  height: 200px;
+  padding: 30px;
+}
+
+.userInterest{
+  height: 200px;
+  width: 300px;
+  margin: 20px;
+  background-color: #5f5c5c;
+  color: white
 }
 
 i{
@@ -101,6 +160,11 @@ i:hover{
 @keyframes tileFadeIn{
   from{opacity:0}
   to{opacity:1}
+}
+
+@keyframes expand{
+  from {height:0px}
+  to {height: 450px}
 }
 
 
