--- a/src/styles/user.css
+++ b/src/styles/user.css
@@ -95,6 +95,7 @@ h1, h2, p {
   flex-direction: row;
   justify-content: space-between;
   margin-top: 50px;
+  flex-wrap: wrap;
 }
 
 .userProfileSec2{
@@ -167,6 +168,60 @@ h1, h2, p {
 
 .addInterests p span{
   margin-left: -30px;
+}
+
+.portfolio{
+  background-color: transparent;
+  height: 600px;
+  width: 600px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.portfolio img{
+  width: 200px;
+  height: 200px;
+  margin: 20px;
+}
+
+.gPhotosPage{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.gPhotosThumb{
+ 
+  border:1px solid black;
+}
+
+.thumbnail{
+  width: 150px;
+  height: 150px;
+}
+
+.gPhotosThumb img{
+  width: 100px;
+  height: 100px;
+}
+
+.gPhotosThumb img:hover{
+  transform: scale(1.1)
+}
+
+.gPhotosThumb img:active{
+  opacity: 0.6
+}
+
+.chooseProfilePicture{
+  overflow: scroll;
+  width: 500px
+}
+
+.choosProfilePicture img{
+  width :50px;
+  height: 50px;
 }
 
 i{
