--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
+@viewport{
+  min-width: 300px;
+  min-height: 568px;
+  max-width: 1000px;
+  max-height: 750px
+}
+
+body,html {
+  margin: 0;
+  padding: 0;
+}
+* {
+  box-sizing: border-box;
+}
+
+html{
+  width: 100vw;
+  height: 100vh
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -6,6 +26,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+#root{
+  padding: 0;
+  min-width: 100vw;
+  min-height: 100vh
 }
 
 code {
