--- a/src/styles/auth.css
+++ b/src/styles/auth.css
@@ -1,13 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Work+Sans');
+@viewport{
+  min-width: 300px;
+  min-height: 568px;
+  max-width: 1000px;
+  max-height: 750px
+}
+
 
 h1, h2, h3, p {
   font-family: 'Work Sans', sans-serif
 }
 
 .main{
-  /* width: 100%;
-  height: 100%; */
-  /* background-image: url('../../landingImage.jpg'); */
+  min-width: 100vw;
+  min-height: 100vh; 
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -30,14 +36,17 @@ h1, h2, h3, p {
 }
 
 .authCardLogin{
-  width: 300px;
-  height: 300px;
+  min-width: 300px;
+  min-height: 300px;
+  margin-bottom: 20vh;
+  position: relative
   /* margin-left: 40%; */
 }
 
 .authCardRegister{
-  width: 450px;
+  min-width: 250px;
   min-height: 300px;
+  max-width: 60vw;
   /* height: 70vh; */
   /* margin-left: 25%; */
   /* margin-top: 5%; */
@@ -51,7 +60,7 @@ h1, h2, h3, p {
 }
 
 input {
-  width: 250px;
+  width: 250px; 
   height: 15px;
   border-radius: 0px;
   margin-bottom: 25px;
@@ -84,6 +93,8 @@ textarea{
   flex-direction: column;
   align-items: center;
   height: 450px;
+  min-width: 75vw ;
+
 }
 
 
