--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -81,8 +81,10 @@ p{
   flex-direction: row;
   justify-content: space-around;
   z-index: 10;
-  opacity: 0.9;
+  opacity: 1;
   font-size: 15px;
+  color: white;
+  margin-bottom: 20px;
 }
 
 .header a:hover{
