implemented nodemailer. Made user more responsive to likes and matches. Created employer profile page with profile edit functionality

--- a/src/styles/employer.css
+++ b/src/styles/employer.css
@@ -15,6 +15,11 @@ h1, h2, p {
   flex-wrap: wrap;
 }
 
+.jobListMain{
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
 .jobCreate{
   display: flex;
   background-color: #696161;
@@ -25,7 +30,8 @@ h1, h2, p {
   width: 600px;
   border-radius: 10px;
   margin-top: 100px;
-  max-width: 90vw;
+  min-width: 320px;
+  max-width: 70vw;
 }
 
 .jobCreate input {
@@ -53,8 +59,9 @@ h1, h2, p {
 .employerJobCard {
   background-color: #1f1c1c;
   color: white;
-  width: 550px;
-  height:300px;
+  min-width: 300px;
+  width: 60vw;
+  height:35vh;
   margin-bottom: 20px;
   margin-top: 20px;
   padding: 20px;
@@ -67,8 +74,8 @@ h1, h2, p {
 }
 
 .workerCard{
-  height: 400px;
-  width: 300px;
+  height: 40vh;
+  width: 250px;
   border: none;
   border-radius: 5px;
   box-shadow: 1px 1px 1px 1px grey;
@@ -77,7 +84,12 @@ h1, h2, p {
   flex-direction: column;
   justify-content: space-around;
   padding: 20px;
+  word-wrap: break-word;
 }
+
+/* .workerCard button{
+  margin: 20px;
+} */
 
 .workerCard img{
   width: 75px;
@@ -101,5 +113,11 @@ h1, h2, p {
     flex-direction: column;
     justify-content: space-around;
     align-items: center
+  }
+  h1{
+    font-size: 20px;
+  }
+  p{
+    font-size: 12px;
   }
 }
