--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -102,6 +102,13 @@ p{
  
 }
 
+.homeMain{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+}
+
 
 #workerAuthNav{
   background-color: transparent;
@@ -122,11 +129,15 @@ p{
   animation: authNavAnimation 2s
 }
 
+#logout{
+  margin-top: 0px;
+}
+
 
 
 button{
   width: 150px;
-  height: 50px;
+  height: 40px;
   border-radius: 10px;
   margin-bottom: 5px;
   border: none;
