--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,22 @@
 @viewport{
-  min-width: 300px;
+  min-width: 320px;
   min-height: 568px;
   max-width: 1000px;
   max-height: 750px
 }
 
 body,html {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 }
 * {
   box-sizing: border-box;
 }
-
+/* 
 html{
   width: 100vw;
   height: 100vh
-}
+} */
 
 body {
   margin: 0;
