--- a/src/styles/auth.css
+++ b/src/styles/auth.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Work+Sans');
-@viewport{
+/* @viewport{
   min-width: 300px;
   min-height: 568px;
   max-width: 1000px;
   max-height: 750px
-}
+} */
 
 
 h1, h2, h3, p {
