--- a/src/styles/employer.css
+++ b/src/styles/employer.css
@@ -15,10 +15,17 @@ h1, h2, p {
   flex-wrap: wrap;
 }
 
+.employerProfile{
+  display: flex;
+  align-self: center;
+  flex-direction: column
+}
+
 .jobListMain{
   display: flex;
   flex-direction: column;
   align-content: center;
+  align-self: center;
 }
 .jobCreate{
   display: flex;
@@ -27,11 +34,11 @@ h1, h2, p {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  width: 600px;
+  /* width: 600px; */
   border-radius: 10px;
   margin-top: 100px;
-  min-width: 320px;
-  max-width: 70vw;
+  min-width: 300px;
+  width: 50vw;
 }
 
 .jobCreate input {
@@ -41,19 +48,20 @@ h1, h2, p {
   box-shadow: 0,0,0,0;
   border-radius: 0;
   background-color: transparent;
-  width: 300px;
-  color: white;
+  width: 90%;
+  color: black;
 }
 
 .jobCreate textarea{
   border: none;
-  width: 300px;
+  width: 90%;
   height: 200px;
   font-size: 12px;
 }
 
 .jobCreate select{
   border: none;
+  width: 65%
 }
 
 .employerJobCard {
@@ -62,6 +70,7 @@ h1, h2, p {
   min-width: 300px;
   width: 60vw;
   height:35vh;
+  min-height: 300px;
   margin-bottom: 20px;
   margin-top: 20px;
   padding: 20px;
@@ -79,12 +88,13 @@ h1, h2, p {
   border: none;
   border-radius: 5px;
   box-shadow: 1px 1px 1px 1px grey;
-  margin-left: 100px;
+  /* margin-left: 100px; */
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding: 20px;
+  padding: 10px;
   word-wrap: break-word;
+  /* align-self: center */
 }
 
 /* .workerCard button{
@@ -102,11 +112,13 @@ h1, h2, p {
 .iconSpaceEmployer{
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 150px;
-  margin-left: 40px;
+  align-items: center;
+  /* margin-left: 20px; */
   /* margin-top: 150px; */
 }
+
 
 @media(max-width:500px){
   .employermain{
