--- a/src/styles/user.css
+++ b/src/styles/user.css
@@ -76,10 +76,10 @@ h1, h2, p {
 .likelist{
   width: 100vw;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-around;
-  align-items: baseline;
+  align-items: center;
   margin-top: 50px;
 }
 .miniCard{
@@ -106,14 +106,10 @@ h1, h2, p {
 .jobSuggestContainer {
   min-width: 100vw;
   min-height: 80vh;
-  /* height: 100vh; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  /* margin-left: 10vw; */
-  /* margin-top: 30px; */
-  /* flex-wrap: wrap; */
 }
 
 .jobcard{
